# CORTEX-Cognitive-Runtime

./: .env.example  .gitignore  LICENSE  OVERTURE_VERSION_HISTORY.md  OVERTURE_v1_0_MASTER_PLAN.md  README.en.md  README.md  benchmark_3_1.py  cortex.py  pyproject.toml  test_async_core.py  test_db_logging.py  test_phase1_migration.py  test_phase2_synapse.py  test_phase3_phase4.py  test_phase5_phase6.py  test_phase7_e2e.py  test_ret.py  test_ret_v2.py  test_ui_stream.py  verify_cortex2.py
app/: main.py
app/api/: routes.py
app/basal_ganglia/: __init__.py  advisor.py  models.py  policies.py
app/core/: config.py  embedder.py  errors.py  lock_manager.py  logging.py  model_tier.py  slot_registry.py
app/db/: sqlite.py
app/execution/: __init__.py  category_selector.py  chromadb_searcher.py  context_agent.py  context_models.py  factory.py  gaba.py  generator_agent.py  live_llm_client.py  llm_client.py  mock_llm_client.py  params.py  plan_models.py  planner_agent.py  swarm.py  swarm_models.py
app/ingress/: cache_key.py  exact_cache.py  sanitizer.py  semantic_cache.py  thalamus.py
app/maintenance/: __init__.py  glymphatic.py  plc.py
app/memory/: goal.py  goal_stack.py  ifom.py  session_goal_context.py  store.py
app/routing/: centroid_store.py  continuation_detector.py  crossroad.py  cue_classifier.py  lc.py  neuromodulators.py  pfc.py  pfc_stub.py  routing_decay.py  routing_ratchet.py  rpe_route_override.py  semantic_evaluator.py  skip_router.py  tier1_5.py
app/rpe/: __init__.py  calculators.py  difficulty_gate.py  difficulty_learner.py  difficulty_store.py  dopamine.py  ifom_store.py  models.py  (+8 more)
config/: tier_slots.example.json
demo_backend/: __init__.py  cortex_client.py  main.py  models.py  rate_limit.py  settings.py
docs/: CORTEX_5_0_OVERTURE_ARCHITECTURE.md  CORTEX_5_0_OVERTURE_METRICS.md
scripts/: analyze_step6_supplementary.py  build_centroids.py  check_llm_slots.py  diagnose_windows_torch_preload.py  measure_3mode_ablation.py  measure_bg_full_input.py  measure_bg_redesign.py  measure_phase5_step6.py  measure_phase6_final.py  measure_similarity_distribution.py  migrate_db.py  run_dev.py
tests/: conftest.py
(+226 files in other folders)
